# Stackelberg-Collaborative-Assembly

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/: ind_train.py  nash_train.py  plot_things.py  sg_perturb.py  sg_train.py
scripts/: run_train.sh  run_train_parallel.sh
sg_taskplan/: __init__.py  env.py  perturbation.py  utils.py
sg_taskplan/data/task1/: parameters.json  task_board.csv  task_property.csv
sg_taskplan/data/task2/: parameters.json  task_board.csv  task_property.csv
sg_taskplan/data/task3/: parameters.json  task_board.csv  task_property.csv
sg_taskplan/data/task4/: parameters.json  task_board.csv  task_property.csv
sg_taskplan/data/task5/: parameters.json  task_board.csv  task_property.csv
sg_taskplan/data/task6/: parameters.json  task_board.csv  task_property.csv
sg_taskplan/data/task7/: parameters.json  task_board.csv  task_property.csv
sg_taskplan/data/task8/: parameters.json  task_board.csv  task_property.csv
sg_taskplan/data/task81/: parameters.json  task_board.csv  task_property.csv
sg_taskplan/other/: agent.py  independent.py  model.py  nash.py
sg_taskplan/sg/: agent.py  model.py  stackelberg.py
